<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abdulrauf.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery2"
        android:name="com.abdulrauf.myapplication.galleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery2" />

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow2"-->
<!--        android:name="com.abdulrauf.myapplication.slideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow2" />-->

    <fragment
        android:id="@+id/nav_slideshow2"
        android:name="com.abdulrauf.myapplication.Manage.ManageAppointments"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_manage_appointments" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.abdulrauf.myapplication.serviceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_prices"
        android:name="com.abdulrauf.myapplication.pricesFragment"
        android:label="@string/menu_price"
        tools:layout="@layout/fragment_prices" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abdulrauf.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.abdulrauf.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.abdulrauf.myapplication.ServicesFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_price"
        android:name="com.abdulrauf.myapplication.PriceFragment"
        android:label="@string/menu_price"
        tools:layout="@layout/fragment_price" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.abdulrauf.myapplication.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />



</navigation>